be/src/testutil/test-udas.cc
@@ -57,36 +57,30 @@ StringVal AggFinalize(FunctionContext*, const StringVal& v) {
 
 // Defines AggIntermediate(int) returns BIGINT intermediate STRING
 void AggIntermediate(FunctionContext* context, const IntVal&, StringVal*) {}
-void AggIntermediateUpdate(FunctionContext* context, const IntVal&, StringVal*) {
+static void ValidateFunctionContext(const FunctionContext* context) {
   assert(context->GetNumArgs() == 1);
   assert(context->GetArgType(0)->type == FunctionContext::TYPE_INT);
   assert(context->GetIntermediateType().type == FunctionContext::TYPE_STRING);
   assert(context->GetReturnType().type == FunctionContext::TYPE_BIGINT);
+}
+void AggIntermediateUpdate(FunctionContext* context, const IntVal&, StringVal*) {
+  ValidateFunctionContext(context);
 }
 void AggIntermediateInit(FunctionContext* context, StringVal*) {
-  assert(context->GetNumArgs() == 1);
-  assert(context->GetArgType(0)->type == FunctionContext::TYPE_INT);
-  assert(context->GetIntermediateType().type == FunctionContext::TYPE_STRING);
-  assert(context->GetReturnType().type == FunctionContext::TYPE_BIGINT);
+  ValidateFunctionContext(context);
 }
 void AggIntermediateMerge(FunctionContext* context, const StringVal&, StringVal*) {
-  assert(context->GetNumArgs() == 1);
-  assert(context->GetArgType(0)->type == FunctionContext::TYPE_INT);
-  assert(context->GetIntermediateType().type == FunctionContext::TYPE_STRING);
-  assert(context->GetReturnType().type == FunctionContext::TYPE_BIGINT);
+  ValidateFunctionContext(context);
 }
 BigIntVal AggIntermediateFinalize(FunctionContext* context, const StringVal&) {
-  assert(context->GetNumArgs() == 1);
-  assert(context->GetArgType(0)->type == FunctionContext::TYPE_INT);
-  assert(context->GetIntermediateType().type == FunctionContext::TYPE_STRING);
-  assert(context->GetReturnType().type == FunctionContext::TYPE_BIGINT);
+  ValidateFunctionContext(context);
   return BigIntVal::null();
 }
 
 // Defines AggDecimalIntermediate(DECIMAL(1,2), INT) returns DECIMAL(5,6)
 // intermediate DECIMAL(3,4)
 // Useful to test that type parameters are plumbed through.
-void AggDecimalIntermediateUpdate(FunctionContext* context, const DecimalVal&, const IntVal&, DecimalVal*) {
+static void ValidateFunctionContext2(const FunctionContext* context) {
   assert(context->GetNumArgs() == 2);
   assert(context->GetArgType(0)->type == FunctionContext::TYPE_DECIMAL);
   assert(context->GetArgType(0)->precision == 2);
@@ -98,46 +92,51 @@ void AggDecimalIntermediateUpdate(FunctionContext* context, const DecimalVal&, c
   assert(context->GetReturnType().type == FunctionContext::TYPE_DECIMAL);
   assert(context->GetReturnType().precision == 6);
   assert(context->GetReturnType().scale == 5);
+}
+void AggDecimalIntermediateUpdate(FunctionContext* context, const DecimalVal&,
+    const IntVal&, DecimalVal*) {
+  ValidateFunctionContext2(context);
 }
 void AggDecimalIntermediateInit(FunctionContext* context, DecimalVal*) {
-  assert(context->GetNumArgs() == 2);
-  assert(context->GetArgType(0)->type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetArgType(0)->precision == 2);
-  assert(context->GetArgType(0)->scale == 1);
-  assert(context->GetArgType(1)->type == FunctionContext::TYPE_INT);
-  assert(context->GetIntermediateType().type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetIntermediateType().precision == 4);
-  assert(context->GetIntermediateType().scale == 3);
-  assert(context->GetReturnType().type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetReturnType().precision == 6);
-  assert(context->GetReturnType().scale == 5);
+  ValidateFunctionContext2(context);
 }
-void AggDecimalIntermediateMerge(FunctionContext* context, const DecimalVal&, DecimalVal*) {
-  assert(context->GetNumArgs() == 2);
-  assert(context->GetArgType(0)->type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetArgType(0)->precision == 2);
-  assert(context->GetArgType(0)->scale == 1);
-  assert(context->GetArgType(1)->type == FunctionContext::TYPE_INT);
-  assert(context->GetIntermediateType().type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetIntermediateType().precision == 4);
-  assert(context->GetIntermediateType().scale == 3);
-  assert(context->GetReturnType().type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetReturnType().precision == 6);
-  assert(context->GetReturnType().scale == 5);
+void AggDecimalIntermediateMerge(FunctionContext* context, const DecimalVal&,
+    DecimalVal*) {
+  ValidateFunctionContext2(context);
 }
 DecimalVal AggDecimalIntermediateFinalize(FunctionContext* context, const DecimalVal&) {
-  assert(context->GetNumArgs() == 2);
-  assert(context->GetArgType(0)->type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetArgType(0)->precision == 2);
-  assert(context->GetArgType(0)->scale == 1);
-  assert(context->GetArgType(1)->type == FunctionContext::TYPE_INT);
-  assert(context->GetIntermediateType().type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetIntermediateType().precision == 4);
-  assert(context->GetIntermediateType().scale == 3);
-  assert(context->GetReturnType().type == FunctionContext::TYPE_DECIMAL);
-  assert(context->GetReturnType().precision == 6);
-  assert(context->GetReturnType().scale == 5);
+  ValidateFunctionContext2(context);
   return DecimalVal::null();
+}
+
+// Defines AggStringIntermediate(DECIMAL(20,10), BIGINT, STRING) returns DECIMAL(20,0)
+// intermediate STRING.
+// Useful to test decimal input types with string as intermediate types.
+static void ValidateFunctionContext3(const FunctionContext* context) {
+  assert(context->GetNumArgs() == 3);
+  assert(context->GetArgType(0)->type == FunctionContext::TYPE_DECIMAL);
+  assert(context->GetArgType(0)->precision == 20);
+  assert(context->GetArgType(0)->scale == 10);
+  assert(context->GetArgType(1)->type == FunctionContext::TYPE_BIGINT);
+  assert(context->GetArgType(2)->type == FunctionContext::TYPE_STRING);
+  assert(context->GetIntermediateType().type == FunctionContext::TYPE_STRING);
+  assert(context->GetReturnType().type == FunctionContext::TYPE_DECIMAL);
+  assert(context->GetReturnType().precision == 20);
+  assert(context->GetReturnType().scale == 0);
+}
+void AggStringIntermediateUpdate(FunctionContext* context, const DecimalVal&,
+    const BigIntVal&, const StringVal&, StringVal*) {
+  ValidateFunctionContext3(context);
+}
+void AggStringIntermediateInit(FunctionContext* context, StringVal*) {
+  ValidateFunctionContext3(context);
+}
+void AggStringIntermediateMerge(FunctionContext* context, const StringVal&, StringVal*) {
+  ValidateFunctionContext3(context);
+}
+DecimalVal AggStringIntermediateFinalize(FunctionContext* context, const StringVal&) {
+  ValidateFunctionContext3(context);
+  return DecimalVal(100);
 }
 
 // Defines MemTest(bigint) return bigint
